# askit-server

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: database.py  main.py  settings.py
app/auth/: dependencies.py  exceptions.py  router.py  validators.py
app/auth/services/: auth_service.py  jwt_service.py  password_service.py
app/core/: __init__.py  exception_handlers.py  exceptions.py  logging.py  logging_examples.py  middleware.py  types.py  validators.py
app/models/: quiz.py  user.py
app/quiz/: exceptions.py  router.py  schemas.py  services.py  types.py
app/user/: router.py  schemas.py  types.py
app/user/services/: user_service.py
