[project]
name = "askit-server"
version = "0.1.0"
description = "AskIt Server API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argon2-cffi>=25.1.0",
    "asyncpg",
    "attrs>=24.0.0",
    "bcrypt",
    "faker",
    "fastapi",
    "greenlet",
    "httpx",
    "passlib",
    "psycopg2-binary",
    "pydantic>=2.0",
    "pydantic-settings",
    "pydantic[email]",
    "pyjwt",
    "python-dotenv",
    "redis",
    "sqlalchemy",
    "structlog>=24.0.0",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.13",
    "pytest",
    "pytest-asyncio",
    "pre-commit>=4.5.1",
    "types-passlib>=1.7.7",
    "types-pyjwt>=1.7.1",
]

[tool.mypy]
python_version = "3.12"
strict = true
show_error_context = true
show_error_codes = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
# Allow subclassing from Any (needed for third-party base classes)
disallow_subclassing_any = false
# Allow untyped decorators (needed for FastAPI route decorators)
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = [
    "passlib.*",
    "argon2.*",
    "structlog.*",
]
ignore_missing_imports = true
